{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 163,
  "lineage": "9bd608d1-9d42-8b57-d807-3bc19a3083af",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_terr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01ccaa25f73acf330",
            "arn": "arn:aws:ec2:us-east-2:971422705308:elastic-ip/eipalloc-01ccaa25f73acf330",
            "association_id": "eipassoc-0f0002eaadb8b7041",
            "domain": "vpc",
            "id": "eipalloc-01ccaa25f73acf330",
            "instance": "i-0cd66a26fca353ba9",
            "network_border_group": "us-east-2",
            "network_interface": "eni-02eeabd1dad5c89ce",
            "private_dns": "ip-10-0-0-83.us-east-2.compute.internal",
            "private_ip": "10.0.0.83",
            "public_dns": "ec2-3-132-127-133.us-east-2.compute.amazonaws.com",
            "public_ip": "3.132.127.133",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Terr-firstEIP"
            },
            "tags_all": {
              "Name": "Terr-firstEIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.my_ec2",
            "aws_key_pair.pairs_key",
            "aws_security_group.sg_terr",
            "aws_subnet.terr_subnet",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da3d552d51881ffe",
            "arn": "arn:aws:ec2:us-east-2:971422705308:elastic-ip/eipalloc-0da3d552d51881ffe",
            "domain": "vpc",
            "id": "eipalloc-0da3d552d51881ffe",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-137-6-81.us-east-2.compute.amazonaws.com",
            "public_ip": "3.137.6.81",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Terr-firstEIP"
            },
            "tags_all": {
              "Name": "Terr-firstEIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-088b41ffb0933423f",
            "arn": "arn:aws:ec2:us-east-2:971422705308:instance/i-0cd66a26fca353ba9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cd66a26fca353ba9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "first-terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02eeabd1dad5c89ce",
            "private_dns": "ip-10-0-0-83.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.83",
            "public_dns": "ec2-3-15-175-116.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.175.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01ce97cede13185a3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-027264525ea04907b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f4e386dc513eac61",
            "tags": {
              "Name": "Terraform-EC2-1"
            },
            "tags_all": {
              "Name": "Terraform-EC2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-027264525ea04907b"
            ]
          },
          "dependencies": [
            "aws_key_pair.pairs_key",
            "aws_security_group.sg_terr",
            "aws_subnet.terr_subnet",
            "aws_vpc.terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-088b41ffb0933423f",
            "arn": "arn:aws:ec2:us-east-2:971422705308:instance/i-03fd7716cf8c06a28",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03fd7716cf8c06a28",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "first-terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07026642ce5f97549",
            "private_dns": "ip-10-0-0-67.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.67",
            "public_dns": "ec2-3-137-204-60.us-east-2.compute.amazonaws.com",
            "public_ip": "3.137.204.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-096800aa26f3b7dc9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-027264525ea04907b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f4e386dc513eac61",
            "tags": {
              "Name": "Terraform-EC2-2"
            },
            "tags_all": {
              "Name": "Terraform-EC2-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-027264525ea04907b"
            ]
          },
          "dependencies": [
            "aws_key_pair.pairs_key",
            "aws_security_group.sg_terr",
            "aws_subnet.terr_subnet",
            "aws_vpc.terraform"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-088b41ffb0933423f",
            "arn": "arn:aws:ec2:us-east-2:971422705308:instance/i-0223c3f8de42e9f3f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0223c3f8de42e9f3f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "first-terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c84605af9e7a10b7",
            "private_dns": "ip-10-0-0-35.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.35",
            "public_dns": "ec2-52-14-50-228.us-east-2.compute.amazonaws.com",
            "public_ip": "52.14.50.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05d7dd7a5d46f73ab",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-027264525ea04907b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f4e386dc513eac61",
            "tags": {
              "Name": "Terraform-EC2-3"
            },
            "tags_all": {
              "Name": "Terraform-EC2-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-027264525ea04907b"
            ]
          },
          "dependencies": [
            "aws_key_pair.pairs_key",
            "aws_security_group.sg_terr",
            "aws_subnet.terr_subnet",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:971422705308:internet-gateway/igw-081cc6eddda106db2",
            "id": "igw-081cc6eddda106db2",
            "owner_id": "971422705308",
            "tags": {
              "Name": "igw-terr"
            },
            "tags_all": {
              "Name": "igw-terr"
            },
            "vpc_id": "vpc-09f9bca5b4bd4b222"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:971422705308:targetgroup/terfm-lbtg/f05354277a389d23",
            "arn_suffix": "targetgroup/terfm-lbtg/f05354277a389d23",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:971422705308:targetgroup/terfm-lbtg/f05354277a389d23",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terfm-lbtg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09f9bca5b4bd4b222"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "atta-err_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:971422705308:targetgroup/terfm-lbtg/f05354277a389d23-20250208182935841200000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:971422705308:targetgroup/terfm-lbtg/f05354277a389d23",
            "target_id": "i-0cd66a26fca353ba9"
          },
          "dependencies": [
            "aws_instance.my_ec2",
            "aws_key_pair.pairs_key",
            "aws_lb_target_group.test",
            "aws_security_group.sg_terr",
            "aws_subnet.terr_subnet",
            "aws_vpc.terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:971422705308:targetgroup/terfm-lbtg/f05354277a389d23-20250208182935807900000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:971422705308:targetgroup/terfm-lbtg/f05354277a389d23",
            "target_id": "i-03fd7716cf8c06a28"
          },
          "dependencies": [
            "aws_instance.my_ec2",
            "aws_key_pair.pairs_key",
            "aws_lb_target_group.test",
            "aws_security_group.sg_terr",
            "aws_subnet.terr_subnet",
            "aws_vpc.terraform"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:971422705308:targetgroup/terfm-lbtg/f05354277a389d23-20250208182935701300000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:971422705308:targetgroup/terfm-lbtg/f05354277a389d23",
            "target_id": "i-0223c3f8de42e9f3f"
          },
          "dependencies": [
            "aws_instance.my_ec2",
            "aws_key_pair.pairs_key",
            "aws_lb_target_group.test",
            "aws_security_group.sg_terr",
            "aws_subnet.terr_subnet",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terr_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:971422705308:route-table/rtb-079a7feb6d05ba76c",
            "id": "rtb-079a7feb6d05ba76c",
            "owner_id": "971422705308",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt-terr-example"
            },
            "tags_all": {
              "Name": "rt-terr-example"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f9bca5b4bd4b222"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_terr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:971422705308:security-group/sg-027264525ea04907b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027264525ea04907b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terr-1-sg",
            "name_prefix": "",
            "owner_id": "971422705308",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09f9bca5b4bd4b222"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terr_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:971422705308:subnet/subnet-0f4e386dc513eac61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4e386dc513eac61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "971422705308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terr-subnet"
            },
            "tags_all": {
              "Name": "terr-subnet"
            },
            "vpc_id": "vpc-09f9bca5b4bd4b222"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:971422705308:vpc/vpc-00be9c5f298730bcc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0780f26c3a4cd4e0d",
            "default_route_table_id": "rtb-00c268a6f754708d3",
            "default_security_group_id": "sg-0b0e3b59c8ebc903f",
            "dhcp_options_id": "dopt-0a7eb902921836007",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00be9c5f298730bcc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00c268a6f754708d3",
            "owner_id": "971422705308"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:971422705308:vpc/vpc-09f9bca5b4bd4b222",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-011efc98058a99705",
            "default_route_table_id": "rtb-0e8c40fa63e0aa08e",
            "default_security_group_id": "sg-0df7f9f5247e09b09",
            "dhcp_options_id": "dopt-0a7eb902921836007",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09f9bca5b4bd4b222",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e8c40fa63e0aa08e",
            "owner_id": "971422705308",
            "tags": {
              "Name": "first-tf-vpc"
            },
            "tags_all": {
              "Name": "first-tf-vpc"
            }
          }
        }
      ]
    }
  ]
}